==> daddasd/EN_LOCK/STM32F103ZET6（HAL库开发）/EN_LOCK/Hardware/RC522.c <==
#include "RC522.h"
#include "stdio.h"
#include "printf.h"
#define RC522_RST_HIGH HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_SET);
#define RC522_RST_LOW HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_RESET);
#define RC522_ENABLE HAL_GPIO_WritePin(GPIOB, GPIO_PIN_8, GPIO_PIN_RESET);
#define RC522_DISABLE HAL_GPIO_WritePin(GPIOB, GPIO_PIN_8, GPIO_PIN_SET);
#define fac_us 72   //时钟频率，单位MHZ

char PcdReset(void)
{
	RC522_RST_HIGH;
    Delay_us(10);
    RC522_RST_LOW;
    HAL_Delay(60);
    RC522_RST_HIGH;
    Delay_us(500);
    WriteRawRC(CommandReg, PCD_RESETPHASE);
    HAL_Delay(2);

    WriteRawRC(ModeReg, 0x3D);
    WriteRawRC(TReloadRegL, 30);
    WriteRawRC(TReloadRegH, 0);
    WriteRawRC(TModeReg, 0x8D);
    WriteRawRC(TPrescalerReg, 0x3E);
    WriteRawRC(TxAutoReg, 0x40);

    ClearBitMask(TestPinEnReg, 0x80);
    WriteRawRC(TxAutoReg, 0x40);

    return MI_OK;
}

unsigned char ReadRawRC(unsigned char Address)
{
    unsigned char ucAddr;
    unsigned char ucResult = 0;
    ucAddr = ((Address << 1) & 0x7E) | 0x80;
    HAL_Delay(1);
    RC522_ENABLE;
    SPI_WriteNBytes(SPI3, &ucAddr, 1);  //向总线写多个数据
    SPI_ReadNBytes(SPI3, &ucResult, 1); //向总线读多个数据
//    HAL_SPI_Transmit(&hspi3,&ucAddr,1,0xff);
//    HAL_SPI_Receive(&hspi3,&ucResult,1,0xff);
    RC522_DISABLE;
    return ucResult;
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    unsigned char ucAddr;
    uint8_t write_buffer[2] = {0};
    ucAddr = ((Address << 1) & 0x7E);
    write_buffer[0] = ucAddr;
    write_buffer[1] = value;
    HAL_Delay(1);
    RC522_ENABLE;
    SPI_WriteNBytes(SPI3, write_buffer, 2);
//    HAL_SPI_Transmit(&hspi3,write_buffer,2,0xff);
    RC522_DISABLE;
}
