==> z4yx/PlayWithSTM32/project/rc522.c <==
#include "stm32f10x.h"
#include "usart1.h"
#include "systick.h"
#include "rc522.h"
#include "rc522_config.h"      //定义RC522的引脚

char PcdReset(void)
{
    GPIO_SetBits(RC522_PORT, RC522_PIN_RST);
    Delay_ms(1);
    GPIO_ResetBits(RC522_PORT, RC522_PIN_RST);
    Delay_ms(1);
    GPIO_SetBits(RC522_PORT, RC522_PIN_RST);
    Delay_ms(1);
    WriteRawRC(CommandReg, PCD_RESETPHASE); //软复位RC522
    Delay_ms(1);
    WriteRawRC(ModeReg, 0x3D);           //和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL, 30);
    WriteRawRC(TReloadRegH, 0);
    WriteRawRC(TModeReg, 0x8D);
    WriteRawRC(TPrescalerReg, 0x3E);
    WriteRawRC(TxAutoReg, 0x40); //必须要
    return MI_OK;
}

static unsigned char ReadRawRC(unsigned char Address)
{
    unsigned char  ucAddr;
    unsigned char ucResult = 0;

    GPIO_ResetBits(RC522_PORT, RC522_PIN_CS);
    ucAddr = ((Address << 1) & 0x7E) | 0x80; // //读寄存器的时候，地址最高位为 1，最低位为0，1-6位取决于地址
    WriteRead_SPI(ucAddr);
    ucResult = WriteRead_SPI(0);
    GPIO_SetBits(RC522_PORT, RC522_PIN_CS);
    return ucResult;
}

static void WriteRawRC(unsigned char  Address, unsigned char  value)
{
    unsigned char ucAddr;

    GPIO_ResetBits(RC522_PORT, RC522_PIN_CS);
    ucAddr = ((Address << 1) & 0x7E); //写寄存器的时候，地址最高位为 0，最低位为0，1-6位取决于地址
    WriteRead_SPI(ucAddr);
    WriteRead_SPI(value);
    GPIO_SetBits(RC522_PORT, RC522_PIN_CS);
}
